--- a/shoptests/pom.xml
+++ b/shoptests/pom.xml
@@ -122,6 +122,12 @@
         </profile>
     </profiles>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+  <!--      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+    </properties>
+
     <build>
         <!-- Loading all ${} -->
         <filters>
@@ -148,10 +154,11 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
+ <!--                   <source>11</source>
+                    <target>11</target>-->
                 </configuration>
             </plugin>
         </plugins>
