StickersTest is ready

--- a/shoptests/src/test/resources/testconfig.properties
+++ b/shoptests/src/test/resources/testconfig.properties
@@ -1,5 +1,5 @@
 driver =${driver}
-userMail = sh@moon.fake
+userEmail = sh@moon.fake
 userPassword = justasample
 adminName = admin
 adminPassword = admin
