--- a/shoptests/src/test/resources/testconfig.properties
+++ b/shoptests/src/test/resources/testconfig.properties
@@ -4,5 +4,5 @@ userPassword = justasample
 adminName = admin
 adminPassword = admin
 implicitWait = 15
-#remoteUrl = http://192.168.100.8:4444/wd/hub
-remote_url =  https://justatry:43fce203-4330-4e56-8ea1-612fe1cade44@ondemand.us-west-1.saucelabs.com:443/wd/hub
+remoteUrl = http://192.168.100.8:4444/wd/hub
+#saurcelab =  https://justatry:43fce203-4330-4e56-8ea1-612fe1cade44@ondemand.us-west-1.saucelabs.com:443/wd/hub
